# to-do-app

./: .dockerignore  .env.dev  .env.j2  .env.template  .env.test  .env.txt  .envtest  .gitignore  Dockerfile  Inventory  Playbook  README.md  app_run.py  create_env_file.sh  docker-compose.yml  env_vars.yml  flask.sh  gunicorn.sh  heroku_config.sh  migrate.py  pyproject.toml  requirements.txt  test.sh  todoapp.service
.github/workflows/: CI-CD.yml  ci-pipeline.yml
documentation/: Raw.drawio
infrastructure/: appservice.tf  db.tf  main.tf  outputs.tf  variables.tf
kube_infra/: deployment.yaml  service.yaml
todo_app/: app.py  flask_config.py  test.py  user.py  viewmodel.py
todo_app/data/: mongoDB_items.py  session_items.py  trello_items.py
todo_app/templates/: index.html  index_with_all_completed.html  index_with_all_completed_with_hidden_buttons.html  index_with_hidden_buttons.html  layout.html  unauthorised.html  unauthorized.html  update.html  update_user.html  user_mgmt.html
todo_app/tests/: test_integration.py  test_unit.py
